# dbtcore-bigquery-aovivo

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .user.yml  dbt_project.yml  pyproject.toml
macros/: cents_to_dollars.sql
models/marts/: customer_order_totals.sql
models/stagging/: _econ__sources.yml  stg_customers.yml  stg_products.sql  stg_products.yml  stg_supplies.sql
snapshots/: stores_snapshot.sql
