[project]
name = "dbtcore-bigquery-aovivo"
version = "0.1.0"
description = "somente o repositorio do workshop"
authors = [
    {name = "ds-borges",email = "diego97sousa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core (>=1.11.7,<2.0.0)",
    "dbt-bigquery (>=1.11.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
sqlfluff = "^4.1.0"

